# transit

./: LICENSE  README.md  index.html  package.json
.github/workflows/: release.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  proxy.rs
src/components/: CopyButton.tsx  RequestDetails.tsx  Sidebar.tsx
src/src/: App.tsx  main.tsx
src/src/components/: CodeBlock.tsx  EmptyState.tsx  ProxyHeader.tsx  RequestDetails.tsx  RequestList.tsx  Sidebar.tsx  index.ts
src/src/components/components/: CodeBlock.tsx  RequestDetails.tsx
src/types/: index.ts
src/utils/: index.ts
