[package]
name = "transit"
version = "0.1.0"
description = "A proxy app for developers"
authors = ["suryanox"]
edition = "2024"

[lib]
name = "transit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
actix-web = "4"
actix-rt = "2"
reqwest = { version = "0.13.2", features = ["json", "gzip", "brotli", "deflate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
portpicker = "0.1"
